--- a/MonoGameExtensions/MonoGameExtensions.csproj
+++ b/MonoGameExtensions/MonoGameExtensions.csproj
@@ -7,8 +7,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Fumen\Fumen.csproj" />
 		<ProjectReference Include="..\StepManiaEditor\MonoGame\MonoGame.Framework\MonoGame.Framework.WindowsDX.csproj" />
+		<ProjectReference Include="..\StepManiaLibrary\Fumen\Fumen\Fumen.csproj" />
 	</ItemGroup>
 
 </Project>
