--- a/StepManiaEditor/StepManiaEditor.csproj
+++ b/StepManiaEditor/StepManiaEditor.csproj
@@ -39,12 +39,12 @@
 	<ItemGroup>
 		<PackageReference Include="ImGui.NET" Version="1.87.3" />
 		<PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
-		<PackageReference Include="System.Text.Json" Version="6.0.0" />
+		<PackageReference Include="System.Text.Json" Version="7.0.0" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\Fumen\Fumen.csproj" />
 		<ProjectReference Include="..\MonoGameExtensions\MonoGameExtensions.csproj" />
-		<ProjectReference Include="..\StepManiaLibrary\StepManiaLibrary.csproj" />
+		<ProjectReference Include="..\StepManiaLibrary\Fumen\Fumen\Fumen.csproj" />
+		<ProjectReference Include="..\StepManiaLibrary\StepManiaLibrary\StepManiaLibrary.csproj" />
 		<ProjectReference Include="MonoGame\MonoGame.Framework\MonoGame.Framework.WindowsDX.csproj" />
 	</ItemGroup>
 	<ItemGroup>
