--- a/StepManiaEditor/StepManiaEditor.csproj
+++ b/StepManiaEditor/StepManiaEditor.csproj
@@ -8,7 +8,7 @@
 		<MonoGamePlatform>Windows</MonoGamePlatform>
 	</PropertyGroup>
 	<PropertyGroup>
-		<ApplicationManifest>app.manifest</ApplicationManifest>
+		<AssemblyName>GrooveAuthor</AssemblyName>
 		<ApplicationIcon>Icon.ico</ApplicationIcon>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -27,8 +27,10 @@
 		<None Remove="Icon.bmp" />
 	</ItemGroup>
 	<ItemGroup>
+	  <Content Include="Icon.ico" />
+	</ItemGroup>
+	<ItemGroup>
 		<EmbeddedResource Include="Icon.ico" />
-		<EmbeddedResource Include="Icon.bmp" />
 	</ItemGroup>
 	<ItemGroup>
 		<MonoGameContentReference Include="Content\Content.mgcb" />
