Add assist tick. Music and the assist tick are now played through a DSP in order to play the assist tick sound at a precise sample-accurate time. Addressed some thread safety issues in SoundMipMap.InternalCreateMipMapAsync, though it is ultimately still not safe for two calls to run concurrently. Fix assert accessing ActiveSong off main thread in file watcher handler.

--- a/StepManiaEditor/StepManiaEditor.csproj
+++ b/StepManiaEditor/StepManiaEditor.csproj
@@ -50,6 +50,21 @@
 		<ProjectReference Include="MonoGame\MonoGame.Framework\MonoGame.Framework.WindowsDX.csproj" />
 	</ItemGroup>
 	<ItemGroup>
+		<None Update="assist-tick-01.wav">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="assist-tick-02.wav">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="assist-tick-03.wav">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="assist-tick.ogg">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="assist-tick.wav">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 		<None Update="atlas.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
