--- a/StepManiaEditor/StepManiaEditor.csproj
+++ b/StepManiaEditor/StepManiaEditor.csproj
@@ -68,6 +68,9 @@
 		<None Update="atlas.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<None Update="beat-tick.wav">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 		<None Update="clap.ogg">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
