--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "StepManiaLibrary"]
 	path = StepManiaLibrary
 	url = https://github.com/PerryAsleep/StepManiaLibrary
+[submodule "ImGui.NET"]
+	path = ImGui.NET
+	url = https://github.com/PerryAsleep/ImGui.NET.git
