- Convert StepManiaEditor project into a class library that can be referenced by platform-specific application projects. - Add StepManiaEditorWindows application project for DirectX/Windows build. - First pass of moving all Windows-specific functionality out of StepManiaEditor. - Update shaders to compile for OpenGL as well as DirectX. Still need to check results. - Remove references to System.Drawing as it is not compatible with linux. Gif parsing and image size determine are now done via SkiaSharp. - Add MonoGame.Framework.DesktopGL to solution in preparation for linux builds. - Update PackageBuild to work with the changes above.

--- a/MonoGameExtensions/MonoGameExtensions.csproj
+++ b/MonoGameExtensions/MonoGameExtensions.csproj
@@ -1,11 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>net8.0-windows7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>disable</Nullable>
-  </PropertyGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\StepManiaEditor\MonoGame\MonoGame.Framework\MonoGame.Framework.WindowsDX.csproj" />
-    <ProjectReference Include="..\StepManiaLibrary\Fumen\Fumen\Fumen.csproj" />
-  </ItemGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>disable</Nullable>
+	</PropertyGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\StepManiaEditor\MonoGame\MonoGame.Framework\MonoGame.Framework.DesktopGL.csproj">
+			<Private>false</Private>
+			<PrivateAssets>all</PrivateAssets>
+			<ExcludeAssets>all</ExcludeAssets>
+		</ProjectReference>
+		<ProjectReference Include="..\StepManiaLibrary\Fumen\Fumen\Fumen.csproj" />
+	</ItemGroup>
 </Project>
