--- a/StepManiaEditor/StepManiaEditor.csproj
+++ b/StepManiaEditor/StepManiaEditor.csproj
@@ -1,16 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<OutputType>WinExe</OutputType>
-		<TargetFramework>net8.0-windows7.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<PublishReadyToRun>false</PublishReadyToRun>
 		<TieredCompilation>false</TieredCompilation>
-		<UseWindowsForms>true</UseWindowsForms>
-		<MonoGamePlatform>Windows</MonoGamePlatform>
-	</PropertyGroup>
-	<PropertyGroup>
-		<AssemblyName>GrooveAuthor</AssemblyName>
-		<ApplicationIcon>Icon.ico</ApplicationIcon>
-		<Version>0.4.1</Version>
+		<DisableFastUpToDateCheck>true</DisableFastUpToDateCheck>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -27,23 +20,13 @@
 		<None Remove="MonoGame\**" />
 	</ItemGroup>
 	<ItemGroup>
-		<None Remove="Icon.ico" />
-		<None Remove="Icon.bmp" />
-	</ItemGroup>
-	<ItemGroup>
-		<Content Include="Icon.ico" />
-	</ItemGroup>
-	<ItemGroup>
-		<EmbeddedResource Include="Icon.ico" />
-	</ItemGroup>
-	<ItemGroup>
 		<MonoGameContentReference Include="Content\Content.mgcb" />
 	</ItemGroup>
 	<ItemGroup>
 		<TrimmerRootAssembly Include="Microsoft.Xna.Framework.Content.ContentTypeReader" Visible="false" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
+		<PackageReference Include="SkiaSharp" Version="3.116.1" />
 		<PackageReference Include="System.Text.Json" Version="9.0.0" />
 	</ItemGroup>
 	<ItemGroup>
@@ -51,32 +34,36 @@
 		<ProjectReference Include="..\MonoGameExtensions\MonoGameExtensions.csproj" />
 		<ProjectReference Include="..\StepManiaLibrary\Fumen\Fumen\Fumen.csproj" />
 		<ProjectReference Include="..\StepManiaLibrary\StepManiaLibrary\StepManiaLibrary.csproj" />
-		<ProjectReference Include="MonoGame\MonoGame.Framework\MonoGame.Framework.WindowsDX.csproj" />
+		<ProjectReference Include="MonoGame\MonoGame.Framework\MonoGame.Framework.DesktopGL.csproj">
+			<Private>false</Private>
+			<PrivateAssets>all</PrivateAssets>
+			<ExcludeAssets>all</ExcludeAssets>
+		</ProjectReference>
 	</ItemGroup>
 	<ItemGroup>
 		<None Update="assist-tick-01.wav">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="assist-tick-02.wav">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="assist-tick-03.wav">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="assist-tick.ogg">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="assist-tick.wav">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="atlas.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="beat-tick.wav">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="clap.ogg">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 		<None Update="Content\Mplus1Code-Bold.ttf">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -87,24 +74,9 @@
 		<None Update="Content\Mplus1Code-Regular.ttf">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
-		<None Update="fmod\lib\x64\fmod.dll">
-			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
-		</None>
-		<None Update="fmod\lib\x64\fmodL.dll">
-			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
-		</None>
-		<None Update="fmod\lib\x64\fmodL_vc.lib">
-			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
-		</None>
-		<None Update="fmod\lib\x64\fmod_vc.lib">
-			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
-		</None>
 	</ItemGroup>
 	<Target Name="RestoreDotnetTools" BeforeTargets="Restore">
 		<Message Text="Restoring dotnet tools" Importance="High" />
 		<Exec Command="dotnet tool restore" />
-	</Target>
-	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-		<Exec Command="call &quot;$(ProjectDir)build.bat&quot; &quot;$(ProjectDir)&quot; &quot;$(TargetDir)&quot;" />
 	</Target>
 </Project>
