--- a/StepManiaEditorWindows/StepManiaEditorWindows.csproj
+++ b/StepManiaEditorWindows/StepManiaEditorWindows.csproj
@@ -37,6 +37,10 @@
 		<Exec Command="dotnet tool restore" />
 	</Target>
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-		<Exec Command="call &quot;$(ProjectDir)build.bat&quot; &quot;$(ProjectDir)&quot; &quot;$(TargetDir)&quot;" />
+		<Copy SourceFiles="$(ProjectDir)..\StepManiaLibrary\Fumen\Fumen\Sound\fmod\lib\windows\x64\fmod.dll" DestinationFolder="$(TargetDir)" />
+		<Copy SourceFiles="$(ProjectDir)..\StepManiaLibrary\Fumen\Fumen\Sound\fmod\lib\windows\x64\fmod_vc.lib" DestinationFolder="$(TargetDir)" />
+		<Copy SourceFiles="$(ProjectDir)..\StepManiaLibrary\Fumen\Fumen\Sound\fmod\lib\windows\x64\fmodL.dll" DestinationFolder="$(TargetDir)" />
+		<Copy SourceFiles="$(ProjectDir)..\StepManiaLibrary\Fumen\Fumen\Sound\fmod\lib\windows\x64\fmodL_vc.lib" DestinationFolder="$(TargetDir)" />
+		<Copy SourceFiles="$(ProjectDir)..\ImGui.NET\deps\cimgui\win-x64\cimgui.dll" DestinationFolder="$(TargetDir)" />
 	</Target>
 </Project>
