--- a/StepManiaEditorWindowsOpenGL/StepManiaEditorWindowsOpenGL.csproj
+++ b/StepManiaEditorWindowsOpenGL/StepManiaEditorWindowsOpenGL.csproj
@@ -9,7 +9,6 @@
 	</PropertyGroup>
 	<PropertyGroup>
 		<AssemblyName>GrooveAuthor</AssemblyName>
-		<ApplicationIcon>..\StepManiaEditor\Icon.ico</ApplicationIcon>
 		<Version>0.4.1</Version>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -20,6 +19,9 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<MonoGameContentReference Include="..\StepManiaEditor\Content\Content.mgcb" />
+		<EmbeddedResource Include="Icon.bmp">
+			<LogicalName>Icon.bmp</LogicalName>
+		</EmbeddedResource>
 	</ItemGroup>
 	<ItemGroup>
 		<TrimmerRootAssembly Include="Microsoft.Xna.Framework.Content.ContentTypeReader" Visible="false" />
