Add explicit RIDs to project as speculative fix for referenced project (SkiaSharp) using incompatible library version on Linux.

--- a/StepManiaEditorLinux/StepManiaEditorLinux.csproj
+++ b/StepManiaEditorLinux/StepManiaEditorLinux.csproj
@@ -10,6 +10,9 @@
 		<AssemblyName>GrooveAuthor</AssemblyName>
 		<Version>0.4.1</Version>
 	</PropertyGroup>
+	<PropertyGroup>
+		<RuntimeIdentifier>linux-x64</RuntimeIdentifier>
+	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
