--- a/StepManiaEditorWindowsOpenGL/StepManiaEditorWindowsOpenGL.csproj
+++ b/StepManiaEditorWindowsOpenGL/StepManiaEditorWindowsOpenGL.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net8.0-windows7.0</TargetFramework>
@@ -10,6 +10,9 @@
 	<PropertyGroup>
 		<AssemblyName>GrooveAuthor</AssemblyName>
 		<Version>0.4.1</Version>
+	</PropertyGroup>
+	<PropertyGroup>
+		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
