Move SkiaSharp linux native assets library out of a StepManiaEditor msbuild conditional and into the Linux project directly. msbuild is not working as expected when propagating properties to child projects.

--- a/StepManiaEditorLinux/StepManiaEditorLinux.csproj
+++ b/StepManiaEditorLinux/StepManiaEditorLinux.csproj
@@ -36,6 +36,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\StepManiaEditor\MonoGame\MonoGame.Framework\MonoGame.Framework.DesktopGL.csproj" />
 		<ProjectReference Include="..\StepManiaEditor\StepManiaEditor.csproj" />
+		<PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="3.116.1" />
 	</ItemGroup>
 	<Target Name="RestoreDotnetTools" BeforeTargets="Restore">
 		<Message Text="Restoring dotnet tools" Importance="High" />
