Set MSBuildProjectDirectory to . in PathMap to use relative instead of full paths in pdb files.

--- a/MonoGameExtensions/MonoGameExtensions.csproj
+++ b/MonoGameExtensions/MonoGameExtensions.csproj
@@ -3,6 +3,7 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>disable</Nullable>
+		<PathMap>$(MSBuildProjectDirectory)=.</PathMap>
 	</PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\StepManiaEditor\MonoGame\MonoGame.Framework\MonoGame.Framework.DesktopGL.csproj">
