--- a/StepManiaEditorTests/StepManiaEditorTests.csproj
+++ b/StepManiaEditorTests/StepManiaEditorTests.csproj
@@ -4,9 +4,9 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>disable</Nullable>
-
 		<IsPackable>false</IsPackable>
 		<IsTestProject>true</IsTestProject>
+		<PathMap>$(MSBuildProjectDirectory)=.</PathMap>
 	</PropertyGroup>
 
 	<ItemGroup>
