--- a/StepManiaEditorWindows/StepManiaEditorWindows.csproj
+++ b/StepManiaEditorWindows/StepManiaEditorWindows.csproj
@@ -6,6 +6,7 @@
 		<TieredCompilation>false</TieredCompilation>
 		<UseWindowsForms>true</UseWindowsForms>
 		<MonoGamePlatform>Windows</MonoGamePlatform>
+		<PathMap>$(MSBuildProjectDirectory)=.</PathMap>
 	</PropertyGroup>
 	<PropertyGroup>
 		<AssemblyName>GrooveAuthor</AssemblyName>
