Force lf line endings for sh files.

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,9 @@
 ###############################################################################
 * text=auto
 
+# Enforce lf line endings for sh files.
+*.sh text eol=lf
+
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
