Adjust path case in desktop entry file.

--- a/StepManiaEditorLinux/GrooveAuthor.desktop
+++ b/StepManiaEditorLinux/GrooveAuthor.desktop
@@ -3,10 +3,10 @@ Type=Application
 Name=GrooveAuthor
 GenericName=Editor for StepMania
 Comment=Editor for StepMania charts
-Icon=/opt/GrooveAuthor/Icon.svg
-TryExec=/opt/GrooveAuthor/GrooveAuthor
-Exec=/opt/GrooveAuthor/GrooveAuthor
-Path=/opt/GrooveAuthor
+Icon=/opt/grooveauthor/Icon.svg
+TryExec=/opt/grooveauthor/GrooveAuthor
+Exec=/opt/grooveauthor/GrooveAuthor
+Path=/opt/grooveauthor
 Terminal=false
 Categories=AudioVideo;AudioVideoEditing;
 Keywords=GrooveAuthor,StepMania,ITG,ITGmania,DDR,PIU,Pump It Up,Dance,StepF2,StepP1
