Remove GTK from MacOS project. Use native file dialogs.

--- a/StepManiaEditorMacOS/StepManiaEditorMacOS.csproj
+++ b/StepManiaEditorMacOS/StepManiaEditorMacOS.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<OutputType>WinExe</OutputType>
-		<TargetFramework>net8.0</TargetFramework>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net8.0-macos</TargetFramework>
 		<PublishReadyToRun>false</PublishReadyToRun>
 		<TieredCompilation>false</TieredCompilation>
 		<MonoGamePlatform>DesktopGL</MonoGamePlatform>
@@ -30,7 +30,6 @@
 		<TrimmerRootAssembly Include="Microsoft.Xna.Framework.Content.ContentTypeReader" Visible="false" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="GtkSharp" Version="3.24.24.95" />
 		<PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
 		<PackageReference Include="System.Text.Json" Version="9.0.0" />
 	</ItemGroup>
