Mac project references cooked content directly instead of building it. This is not ideal as it involves a manual step when updating content, but MCGB on Mac has a number of issues which prevent it from working properly.

--- a/StepManiaEditorMacOS/StepManiaEditorMacOS.csproj
+++ b/StepManiaEditorMacOS/StepManiaEditorMacOS.csproj
@@ -39,6 +39,30 @@
 		<PackageReference Include="SkiaSharp.NativeAssets.macOS" Version="3.116.1" />
 	</ItemGroup>
 	<ItemGroup>
+	  <None Update="Content\atlas.xnb">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Content\fxaa.xnb">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Content\logo-attribution.xnb">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Content\Mplus1Code-Bold.ttf">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Content\Mplus1Code-Medium.ttf">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Content\mplus1code-medium.xnb">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Content\Mplus1Code-Regular.ttf">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Content\waveform-color.xnb">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	  <None Update="GrooveAuthor.desktop">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
