--- a/MonoGameExtensions/MonoGameExtensions.csproj
+++ b/MonoGameExtensions/MonoGameExtensions.csproj
@@ -3,6 +3,8 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>disable</Nullable>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
 		<PathMap>$(MSBuildProjectDirectory)=.</PathMap>
 	</PropertyGroup>
 	<ItemGroup>
