--- a/StepManiaEditorTextureGenerator/StepManiaEditorTextureGenerator.csproj
+++ b/StepManiaEditorTextureGenerator/StepManiaEditorTextureGenerator.csproj
@@ -4,6 +4,8 @@
 		<TargetFramework>net8.0-windows7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>disable</Nullable>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
 		<PathMap>$(MSBuildProjectDirectory)=.</PathMap>
 	</PropertyGroup>
 	<ItemGroup>
